cambio colore cta modale

--- a/src/app/my-urls/my-urls.component.html
+++ b/src/app/my-urls/my-urls.component.html
@@ -88,7 +88,12 @@
       <button (click)="deleteUrl(actual_index)" mat-raised-button color="warn">
         yes
       </button>
-      <button (click)="closeDeleteModal()" color="primary" mat-button>
+      <button
+        (click)="closeDeleteModal()"
+        mat-raised-button
+        color="accent"
+        mat-button
+      >
         no
       </button>
     </footer>
