--- a/src/app/my-urls/my-urls.component.html
+++ b/src/app/my-urls/my-urls.component.html
@@ -85,7 +85,12 @@
       <p>Are you sure you want to delete this URL?</p>
     </section>
     <footer class="modal-card-foot">
-      <button (click)="deleteUrl(actual_index)" mat-raised-button color="warn">
+      <button
+        (click)="deleteUrl(actual_index)"
+        class="mr-4"
+        mat-raised-button
+        color="warn"
+      >
         yes
       </button>
       <button
