--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,4 +1,2 @@
-
-<div id="map" style=" height: 400px; width:100%;">
-</div>
-<div class='map-overlay' id='legend'></div>
+<div id="map" style="height: 400px; width: 100%"></div>
+<div class="map-overlay" id="legend"></div>
