--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -1,34 +1,44 @@
 <div class="main-login">
-  <ngx-spinner
-    bdColor="rgba(51,51,51,0.8)"
-    size="medium"
-    color="#11d596"
-    type="ball-scale-multiple"
-  ></ngx-spinner>
-  <h2 class="title has-text-centered">Login</h2>
-  <div class="card">
-    <div class="card-content">
-  <form (ngSubmit)="onLogin()" class="form" [formGroup]="loginForm" action="">
-    <app-input
-      inputType="email"
-      label="E-mail"
-      [control]="$any(loginForm).get('username')"
-    ></app-input>
-    <app-input
-      inputType="password"
-      label="Password"
-      [control]="$any(loginForm).get('password')"
-    ></app-input>
-    <mat-error
-      class="ui pointing red basic label error is-flex has-text-centered is-justify-content-center"
-      >{{ error }}</mat-error
-    >
-    <div class="is-flex is-justify-content-center">
-      <button class="btn-align-custom" type="submit" [disabled]="loginForm.invalid" mat-raised-button>
-        login
-      </button>
+    <ngx-spinner
+        bdColor="rgba(51,51,51,0.8)"
+        size="medium"
+        color="#11d596"
+        type="ball-scale-multiple"
+    ></ngx-spinner>
+    <h2 class="title has-text-centered">Login</h2>
+    <div class="card">
+        <div class="card-content">
+            <form
+                (ngSubmit)="onLogin()"
+                class="form"
+                [formGroup]="loginForm"
+                action=""
+            >
+                <app-input
+                    inputType="email"
+                    label="E-mail"
+                    [control]="$any(loginForm).get('username')"
+                ></app-input>
+                <app-input
+                    inputType="password"
+                    label="Password"
+                    [control]="$any(loginForm).get('password')"
+                ></app-input>
+                <mat-error
+                    class="ui pointing red basic label error is-flex has-text-centered is-justify-content-center"
+                    >{{ error }}</mat-error
+                >
+                <div class="is-flex is-justify-content-center">
+                    <button
+                        class="btn-align-custom"
+                        type="submit"
+                        [disabled]="loginForm.invalid"
+                        mat-raised-button
+                    >
+                        login
+                    </button>
+                </div>
+            </form>
+        </div>
     </div>
-  </form>
-    </div>
-  </div>
 </div>
