--- a/src/app/auth/signup/errorModal.component.html
+++ b/src/app/auth/signup/errorModal.component.html
@@ -1,22 +1,27 @@
 <div mat-dialog-content>
-  <div *ngIf="dialogcreated">
-    <h3  class="created" color="accent">{{dialogcreated}}</h3>
-
-  </div>
-  <span *ngIf="dialogTitle">
-    <span *ngIf="more_errors">
-      <mat-error *ngFor="let item of dialogTitle">{{ item.msg }}</mat-error>
+    <div *ngIf="dialogcreated">
+        <h3 class="created" color="accent">{{ dialogcreated }}</h3>
+    </div>
+    <span *ngIf="dialogTitle">
+        <span *ngIf="more_errors">
+            <mat-error *ngFor="let item of dialogTitle">{{
+                item.msg
+            }}</mat-error>
+        </span>
+        <span *ngIf="one_error">
+            <mat-error>{{ dialogTitle.message }}</mat-error>
+        </span>
     </span>
-    <span *ngIf="one_error">
-      <mat-error >{{dialogTitle.message}}</mat-error>
-    </span>
-  </span>
 </div>
 <div mat-dialog-actions>
-  <button *ngIf="dialogcreated" mat-raised-button color="accent">
-    <a [routerLink]="['signin']" mat-dialog-close routerLinkActive="router-link-active">
-      Login
-    </a>
-  </button>
-  <button *ngIf="dialogTitle" mat-button mat-dialog-close>Close</button>
+    <button *ngIf="dialogcreated" mat-raised-button color="accent">
+        <a
+            [routerLink]="['signin']"
+            mat-dialog-close
+            routerLinkActive="router-link-active"
+        >
+            Login
+        </a>
+    </button>
+    <button *ngIf="dialogTitle" mat-button mat-dialog-close>Close</button>
 </div>
