--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,97 +1,107 @@
 <div class="container-title">
-  <h1 class="register-title title">Create an Account</h1>
+    <h1 class="register-title title">Create an Account</h1>
 </div>
 
 <div class="card">
-  <div class="card-content">
-    <div class="is-flex is-align-content-center is-justify-content-center">
-      <button
-        (click)="loginWithGoogle()"
-        mat-raised-button
-        class="google-login-btn btn-align-custom"
-      >
-        <img
-          width="20"
-          src="https://d1ayxb9ooonjts.cloudfront.net/8bc625062aeffa94729b9336243bed9d.svg"
-          alt=""
-          srcset=""
-        />
-        Sign up with Google
-      </button>
-    </div>
-    <div class="is-flex is-align-content-center is-justify-content-center">
-      <span>OR</span>
-    </div>
+    <div class="card-content">
+        <div class="is-flex is-align-content-center is-justify-content-center">
+            <button
+                (click)="loginWithGoogle()"
+                mat-raised-button
+                class="google-login-btn btn-align-custom"
+            >
+                <img
+                    width="20"
+                    src="https://d1ayxb9ooonjts.cloudfront.net/8bc625062aeffa94729b9336243bed9d.svg"
+                    alt=""
+                    srcset=""
+                />
+                Sign up with Google
+            </button>
+        </div>
+        <div class="is-flex is-align-content-center is-justify-content-center">
+            <span>OR</span>
+        </div>
 
-    <form (ngSubmit)="onSubmit()" class="form" [formGroup]="authForm" action="">
-      <app-input
-        inputType="text"
-        label="Your e-mail"
-        [control]="$any(authForm).get('username')"
-      ></app-input>
-      <app-input
-        inputType="text"
-        label="Repeat e-mail"
-        [control]="$any(authForm).get('conf_username')"
-      ></app-input>
-      <app-input
-        inputType="password"
-        label="Enter your password"
-        [control]="$any(authForm).get('password')"
-      ></app-input>
-      <div class="information-password">
-        <p class="pass-info">
-          min 8 characters, max 15characters, a number and a uppercase letter
-        </p>
-      </div>
-      <app-input
-        inputType="{{ inputType }}"
-        label="Repeat password"
-        [control]="$any(authForm).get('conf_password')"
-      >
-      </app-input>
-      <div
-        *ngIf="
-          $any(authForm).get('password').touched &&
-          $any(authForm).get('conf_password').touched &&
-          $any(authForm).errors?.passwordsDontmatch
-        "
-        class="ui red basic label"
-      >
-        <mat-error> Password and passwordConfirmation must match </mat-error>
-      </div>
-      <div
-        *ngIf="
-          $any(authForm).get('username').touched &&
-          $any(authForm).get('conf_username').touched &&
-          $any(authForm).errors?.usernamesDontmatch
-        "
-        class="ui red basic label"
-      >
-        <mat-error> Username and usernameConfirmation must match </mat-error>
-      </div>
-      <div>
-        <button
-          class="btn-align-custom"
-          type="submit"
-          mat-raised-button
-          color="accent"
+        <form
+            (ngSubmit)="onSubmit()"
+            class="form"
+            [formGroup]="authForm"
+            action=""
         >
-          Create an Account
-        </button>
-      </div>
-      <div class="is-flex is-justify-content-center already-account">
-        <span class="switch to-sign-in" tabindex="8">
-          <span> Do you already have an account? </span>
-          <div class="button-redirect-signin">
-            <a routerLink="../signin">
-              <button class="btn-align-custom" mat-raised-button>
-                Sign In
-              </button>
-            </a>
-          </div>
-        </span>
-      </div>
-    </form>
-  </div>
+            <app-input
+                inputType="text"
+                label="Your e-mail"
+                [control]="$any(authForm).get('username')"
+            ></app-input>
+            <app-input
+                inputType="text"
+                label="Repeat e-mail"
+                [control]="$any(authForm).get('conf_username')"
+            ></app-input>
+            <app-input
+                inputType="password"
+                label="Enter your password"
+                [control]="$any(authForm).get('password')"
+            ></app-input>
+            <div class="information-password">
+                <p class="pass-info">
+                    min 8 characters, max 15characters, a number and a uppercase
+                    letter
+                </p>
+            </div>
+            <app-input
+                inputType="{{ inputType }}"
+                label="Repeat password"
+                [control]="$any(authForm).get('conf_password')"
+            >
+            </app-input>
+            <div
+                *ngIf="
+                    $any(authForm).get('password').touched &&
+                    $any(authForm).get('conf_password').touched &&
+                    $any(authForm).errors?.passwordsDontmatch
+                "
+                class="ui red basic label"
+            >
+                <mat-error>
+                    Password and passwordConfirmation must match
+                </mat-error>
+            </div>
+            <div
+                *ngIf="
+                    $any(authForm).get('username').touched &&
+                    $any(authForm).get('conf_username').touched &&
+                    $any(authForm).errors?.usernamesDontmatch
+                "
+                class="ui red basic label"
+            >
+                <mat-error>
+                    Username and usernameConfirmation must match
+                </mat-error>
+            </div>
+            <div>
+                <button
+                    class="btn-align-custom"
+                    type="submit"
+                    mat-raised-button
+                    color="accent"
+                >
+                    Create an Account
+                </button>
+            </div>
+            <div class="is-flex is-justify-content-center already-account">
+                <span class="switch to-sign-in" tabindex="8">
+                    <span> Do you already have an account? </span>
+                    <div class="button-redirect-signin">
+                        <a routerLink="../signin">
+                            <button class="btn-align-custom" mat-raised-button>
+                                Sign In
+                            </button>
+                        </a>
+                    </div>
+                </span>
+            </div>
+        </form>
+    </div>
 </div>
