--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,113 +1,126 @@
 <div class="main columns">
-  <div class="column is-half-desktop is-full-mobile">
-    <ngx-spinner
-      bdColor="rgba(51,51,51,0.8)"
-      size="medium"
-      color="#11d596"
-      type="ball-scale-multiple"
-    ></ngx-spinner>
-    <div>
-      <h2 class="title" color="primary">Life is too short, for long URLs...</h2>
+    <div class="column is-half-desktop is-full-mobile">
+        <ngx-spinner
+            bdColor="rgba(51,51,51,0.8)"
+            size="medium"
+            color="#11d596"
+            type="ball-scale-multiple"
+        ></ngx-spinner>
+        <div>
+            <h2 class="title" color="primary">
+                Life is too short, for long URLs...
+            </h2>
+        </div>
+        <mat-card>
+            <p class="insert" *ngIf="!signedin">Insert a long URL</p>
+            <p class="insert" *ngIf="signedin">
+                Insert a long URL and customize it if you want!
+            </p>
+            <div class="search">
+                <p *ngIf="signedin">Edit slug</p>
+                <div *ngIf="signedin" class="is-flex is-align-items-center">
+                    <mat-form-field *ngIf="signedin">
+                        <input
+                            matInput
+                            type="text"
+                            [(ngModel)]="customSlug"
+                            placeholder="title"
+                            name=""
+                            id=""
+                        />
+                    </mat-form-field>
+                    <button mat-button (click)="saveCustomSlug(customSlug)">
+                        Save
+                    </button>
+                </div>
+                <div *ngIf="isSavedCustomSlug">
+                    <p class="expected-title">expected Url</p>
+                    <p class="expected-url accent-color">
+                        shortangular.netlify.app/{{ customSlug }}
+                    </p>
+                </div>
+                <mat-form-field
+                    class="example-full-width link-input"
+                    appearance="fill"
+                >
+                    <mat-label>URL</mat-label>
+                    <input [(ngModel)]="insertedURL" matInput value="" />
+                    <button
+                        color="accent"
+                        class="button shorten-btn"
+                        (click)="
+                            this.signedin
+                                ? onInsertedURLlogged(insertedURL, customSlug!)
+                                : onInsertedURL(insertedURL)
+                        "
+                        mat-raised-button
+                    >
+                        Shorten
+                    </button>
+                </mat-form-field>
+                <mat-error *ngIf="error">{{ error }}</mat-error>
+                <div *ngIf="genSlug" class="res">
+                    <div class="gen-link">
+                        <div class="slug">
+                            <svg
+                                class="ft-green-tick"
+                                xmlns="http://www.w3.org/2000/svg"
+                                height="20"
+                                width="20"
+                                viewBox="0 0 48 48"
+                                aria-hidden="true"
+                            >
+                                <circle
+                                    class="circle"
+                                    fill="#5bb543"
+                                    cx="24"
+                                    cy="24"
+                                    r="22"
+                                />
+                                <path
+                                    class="tick"
+                                    fill="none"
+                                    stroke="#FFF"
+                                    stroke-width="6"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    stroke-miterlimit="10"
+                                    d="M14 27l5.917 4.917L34 17"
+                                />
+                            </svg>
+                            <a
+                                target="_blank"
+                                [routerLink]="['../', genSlug]"
+                                routerLinkActive="router-link-active"
+                                >shortangular.netlify.app/{{ genSlug }}
+                            </a>
+                        </div>
+                        <div class="copy-btn-div">
+                            <button
+                                name="copy"
+                                ngDefaultControl
+                                (click)="copied()"
+                                class="copy-btn"
+                                [(ngModel)]="copy"
+                                color="primary"
+                                [cdkCopyToClipboard]="link"
+                                mat-button
+                            >
+                                {{ copy }}
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </mat-card>
     </div>
-    <mat-card>
-      <p class="insert" *ngIf="!signedin">Insert a long URL</p>
-      <p class="insert" *ngIf="signedin">
-        Insert a long URL and customize it if you want!
-      </p>
-      <div class="search">
-        <p *ngIf="signedin">Edit slug</p>
-        <div *ngIf="signedin" class="is-flex is-align-items-center">
-          <mat-form-field *ngIf="signedin">
-            <input
-              matInput
-              type="text"
-              [(ngModel)]="customSlug"
-              placeholder="title"
-              name=""
-              id=""
-            />
-          </mat-form-field>
-          <button mat-button (click)="saveCustomSlug(customSlug)">Save</button>
-        </div>
-        <div *ngIf="isSavedCustomSlug">
-          <p class="expected-title">expected Url</p>
-          <p class="expected-url accent-color">
-            shortangular.netlify.app/{{ customSlug }}
-          </p>
-        </div>
-        <mat-form-field class="example-full-width link-input" appearance="fill">
-          <mat-label>URL</mat-label>
-          <input [(ngModel)]="insertedURL" matInput value="" />
-          <button
-            color="accent"
-            class="button shorten-btn"
-            (click)="
-              this.signedin
-                ? onInsertedURLlogged(insertedURL, customSlug!)
-                : onInsertedURL(insertedURL)
-            "
-            mat-raised-button
-          >
-            Shorten
-          </button>
-        </mat-form-field>
-        <mat-error *ngIf="error">{{ error }}</mat-error>
-        <div *ngIf="genSlug" class="res">
-          <div class="gen-link">
-            <div class="slug">
-              <svg
-                class="ft-green-tick"
-                xmlns="http://www.w3.org/2000/svg"
-                height="20"
-                width="20"
-                viewBox="0 0 48 48"
-                aria-hidden="true"
-              >
-                <circle class="circle" fill="#5bb543" cx="24" cy="24" r="22" />
-                <path
-                  class="tick"
-                  fill="none"
-                  stroke="#FFF"
-                  stroke-width="6"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-miterlimit="10"
-                  d="M14 27l5.917 4.917L34 17"
-                />
-              </svg>
-              <a
-                target="_blank"
-                [routerLink]="['../', genSlug]"
-                routerLinkActive="router-link-active"
-                >shortangular.netlify.app/{{ genSlug }}
-              </a>
-            </div>
-            <div class="copy-btn-div">
-              <button
-                name="copy"
-                ngDefaultControl
-                (click)="copied()"
-                class="copy-btn"
-                [(ngModel)]="copy"
-                color="primary"
-                [cdkCopyToClipboard]="link"
-                mat-button
-              >
-                {{ copy }}
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </mat-card>
-  </div>
-  <div class="column is-half-desktop short-man">
-    <img
-      src="assets/images/shorturl-man.svg"
-      alt=""
-      width="600px"
-      sizes=""
-      srcset=""
-    />
-  </div>
+    <div class="column is-half-desktop short-man">
+        <img
+            src="assets/images/shorturl-man.svg"
+            alt=""
+            width="600px"
+            sizes=""
+            srcset=""
+        />
+    </div>
 </div>
