--- a/src/app/my-urls/my-urls.component.html
+++ b/src/app/my-urls/my-urls.component.html
@@ -1,136 +1,140 @@
 <div class="body-urls">
-  <ngx-spinner
-    bdColor="rgba(51,51,51,0.8)"
-    size="medium"
-    color="#11d596"
-    type="ball-scale-multiple"
-  ></ngx-spinner>
+    <ngx-spinner
+        bdColor="rgba(51,51,51,0.8)"
+        size="medium"
+        color="#11d596"
+        type="ball-scale-multiple"
+    ></ngx-spinner>
 
-  <app-overview
-    [total_urls_clicks]="total_clicks"
-    [total_urls]="total_urls"
-  ></app-overview>
-  <section class="section">
-    <div class="container">
-      <div class="b-table">
-        <div class="table-wrapper has-mobile-cards">
-          <table
-            class="table is-fullwidth is-striped is-hoverable is-fullwidth"
-          >
-            <thead>
-              <tr>
-                <th>Link</th>
-                <th>Destination</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let item of myUrls?.urls; let i = index">
-                <td data-label="Link">
-                  <p
-                    matTooltip="Click to copy"
-                    matTooltipClass="example-tooltip-red"
-                    aria-label="Button that shows a red tooltip"
-                    [cdkCopyToClipboard]="copy(item.slug)"
-                    class="item p-link"
-                  >
-                    shortangular.netlify.app/{{ item.slug }}
-                  </p>
-                </td>
-                <td
-                  class="td-target"
-                  (click)="openInfosModal(i)"
-                  data-label="Destination"
-                >
-                  <p class="item">
-                    {{ item.target }}
-                  </p>
-                </td>
-                <td data-label="actions">
-                  <div class="actions">
-                    <button
-                      class="info-action"
-                      mat-mini-fab
-                      color="primary"
-                      (click)="openInfosModal(i)"
+    <app-overview
+        [total_urls_clicks]="total_clicks"
+        [total_urls]="total_urls"
+    ></app-overview>
+    <section class="section">
+        <div class="container">
+            <div class="b-table">
+                <div class="table-wrapper has-mobile-cards">
+                    <table
+                        class="table is-fullwidth is-striped is-hoverable is-fullwidth"
                     >
-                      info
-                    </button>
-                    <mat-icon (click)="openDeleteModal(i)" class="delete-action"
-                      >delete</mat-icon
-                    >
-                  </div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+                        <thead>
+                            <tr>
+                                <th>Link</th>
+                                <th>Destination</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr
+                                *ngFor="let item of myUrls?.urls; let i = index"
+                            >
+                                <td data-label="Link">
+                                    <p
+                                        matTooltip="Click to copy"
+                                        matTooltipClass="example-tooltip-red"
+                                        aria-label="Button that shows a red tooltip"
+                                        [cdkCopyToClipboard]="copy(item.slug)"
+                                        class="item p-link"
+                                    >
+                                        shortangular.netlify.app/{{ item.slug }}
+                                    </p>
+                                </td>
+                                <td
+                                    class="td-target"
+                                    (click)="openInfosModal(i)"
+                                    data-label="Destination"
+                                >
+                                    <p class="item">
+                                        {{ item.target }}
+                                    </p>
+                                </td>
+                                <td data-label="actions">
+                                    <div class="actions">
+                                        <button
+                                            class="info-action"
+                                            mat-mini-fab
+                                            color="primary"
+                                            (click)="openInfosModal(i)"
+                                        >
+                                            info
+                                        </button>
+                                        <mat-icon
+                                            (click)="openDeleteModal(i)"
+                                            class="delete-action"
+                                            >delete</mat-icon
+                                        >
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </section>
+    </section>
 </div>
 <div [class.is-active]="modal_deleting" class="modal">
-  <div class="modal-background"></div>
-  <div class="modal-card delete-modal m-2">
-    <header class="modal-card-head">
-      <p class="modal-card-title">Confirmation</p>
+    <div class="modal-background"></div>
+    <div class="modal-card delete-modal m-2">
+        <header class="modal-card-head">
+            <p class="modal-card-title">Confirmation</p>
 
-      <button
-        color="warn"
-        (click)="closeDeleteModal()"
-        class="delete"
-        aria-label="close"
-      ></button>
-    </header>
-    <section class="modal-card-body p-0">
-      <p>Are you sure you want to delete this URL?</p>
-    </section>
-    <footer class="modal-card-foot">
-      <button
-        (click)="deleteUrl(actual_index)"
-        class="mr-4"
-        mat-raised-button
-        color="warn"
-      >
-        yes
-      </button>
-      <button
-        (click)="closeDeleteModal()"
-        mat-raised-button
-        color="accent"
-        mat-button
-      >
-        no
-      </button>
-    </footer>
-  </div>
+            <button
+                color="warn"
+                (click)="closeDeleteModal()"
+                class="delete"
+                aria-label="close"
+            ></button>
+        </header>
+        <section class="modal-card-body p-0">
+            <p>Are you sure you want to delete this URL?</p>
+        </section>
+        <footer class="modal-card-foot">
+            <button
+                (click)="deleteUrl(actual_index)"
+                class="mr-4"
+                mat-raised-button
+                color="warn"
+            >
+                yes
+            </button>
+            <button
+                (click)="closeDeleteModal()"
+                mat-raised-button
+                color="accent"
+                mat-button
+            >
+                no
+            </button>
+        </footer>
+    </div>
 </div>
 <div [class.is-active]="modal" class="modal">
-  <div class="modal-background"></div>
-  <div class="modal-card m-2">
-    <header class="modal-card-head">
-      <p class="modal-card-title">Map of Clicks</p>
-      <button
-        (click)="closeInfosModal()"
-        class="delete"
-        aria-label="close"
-      ></button>
-    </header>
-    <section class="modal-card-body p-0" *ngIf="click_from">
-      <app-map [click]="click_from" *ngIf="this.modal"></app-map>
-    </section>
+    <div class="modal-background"></div>
+    <div class="modal-card m-2">
+        <header class="modal-card-head">
+            <p class="modal-card-title">Map of Clicks</p>
+            <button
+                (click)="closeInfosModal()"
+                class="delete"
+                aria-label="close"
+            ></button>
+        </header>
+        <section class="modal-card-body p-0" *ngIf="click_from">
+            <app-map [click]="click_from" *ngIf="this.modal"></app-map>
+        </section>
 
-    <footer *ngIf="total_clicks_single != 0" class="modal-card-foot">
-      <div class="footer-infos">
-        <img
-          class="img-modal"
-          src="./assets/icons8-statistic-32.png"
-          width="20px"
-          alt=""
-          srcset=""
-        />
-        <span class="infos-modal-title">TOTAL CLICKS:</span>
-        <span class="infos-modal-datas">{{ total_clicks_single }}</span>
-      </div>
-    </footer>
-  </div>
+        <footer *ngIf="total_clicks_single !== 0" class="modal-card-foot">
+            <div class="footer-infos">
+                <img
+                    class="img-modal"
+                    src="./assets/icons8-statistic-32.png"
+                    width="20px"
+                    alt=""
+                    srcset=""
+                />
+                <span class="infos-modal-title">TOTAL CLICKS:</span>
+                <span class="infos-modal-datas">{{ total_clicks_single }}</span>
+            </div>
+        </footer>
+    </div>
 </div>
