fix errori di import

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -5,11 +5,7 @@
 <div class="card">
     <div class="card-content">
         <div class="is-flex is-align-content-center is-justify-content-center">
-            <button
-                (click)="loginWithGoogle()"
-                mat-raised-button
-                class="google-login-btn btn-align-custom"
-            >
+            <button mat-raised-button class="google-login-btn btn-align-custom">
                 <img
                     width="20"
                     src="https://d1ayxb9ooonjts.cloudfront.net/8bc625062aeffa94729b9336243bed9d.svg"
